--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,3 +1,7 @@
-- clean: []
-- link: {}
-- shell: []
+- clean: ['~']
+
+- link:
+    ~/.zshrc: zshrc
+
+- shell:
+  - [git submodule update --init --recursive, Installing submodules]
