--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,4 +12,4 @@
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
-  - [git submodule update --remote  --recursive, Updating submodules]
+  - [git submodule foreach git fetch origin --tags && git pull && git submodule update --init --recursive, Updating submodules]
