Install fix neofetch

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -2,6 +2,7 @@
 
 - shell:
   - [mkdir -p ~/.zsh, Creating .zsh directory]
+  - [mkdir -p ~/.config/neofetch, Creating neofetch directory]
 - link:
     ~/.zshrc:                            zshrc
     ~/.antigen:                          antigen
