--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,4 +14,4 @@
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
   - [git submodule foreach git fetch origin --tags && git pull && git submodule update --init --recursive, Updating submodules]
-  - [(crontab -l 2>/dev/null; echo "*/5 * * * * cd ~/.dotfiles && git pull origin master && ./install > /dev/null") | crontab -n, Adding update cron]
+  - [(crontab -l 2>/dev/null; echo "0 0 * * * cd ~/.dotfiles && git pull origin master && ./install > /dev/null") | crontab -n, Adding update cron]
