--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,16 +1,17 @@
-- clean:                                 ['~']
+- clean:                                  ['~']
 
 - shell:
   - [mkdir -p ~/.zsh, Creating .zsh directory]
   - [mkdir -p ~/.config/neofetch, Creating neofetch directory]
 - link:
-    ~/.zshrc:                            zshrc
-    ~/.antigen:                          antigen
-    ~/.zsh/zsh-history-substring-search: zsh-history-substring-search
-    ~/.zsh/zsh-autosuggestions:          zsh-autosuggestions
-    /etc/cron.daily/updot:               cron.updot
-    ~/.config/neofetch/config.conf:      config/neofetch/config.conf
-    ~/.config/neofetch/config:           config/neofetch/config.conf
+    ~/.zshrc:                             zshrc
+    ~/.antigen:                           antigen
+    ~/.zsh/zsh-history-substring-search:  zsh-history-substring-search
+    ~/.zsh/zsh-autosuggestions:           zsh-autosuggestions
+    ~/.zsh/zsh-syntax-highlighting:       zsh-syntax-highlighting
+#    /etc/cron.daily/updot:               cron.updot
+    ~/.config/neofetch/config.conf:       config/neofetch/config.conf
+    ~/.config/neofetch/config:            config/neofetch/config.conf
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
   - [git submodule foreach git fetch origin --tags && git pull && git submodule update --init --recursive, Updating submodules]
