--- a/.gitmodules
+++ b/.gitmodules
@@ -5,11 +5,14 @@
 	path = antigen
 	url = https://github.com/zsh-users/antigen.git
 [submodule "zsh-history-substring-search"]
-	path = zsh/zsh-history-substring-search/zsh-history-substring-search
+	path = zsh/submodules/zsh-history-substring-search
 	url = https://github.com/zsh-users/zsh-history-substring-search
 [submodule "zsh-autosuggestions"]
-	path = zsh/zsh-autosuggestions/zsh-autosuggestions
+	path = zsh/submodules/zsh-autosuggestions
 	url = https://github.com/tarruda/zsh-autosuggestions
 [submodule "zsh-syntax-highlighting"]
-	path = zsh/zsh-syntax-highlighting/zsh-syntax-highlighting
+	path = zsh/submodules/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting
+[submodule "fzf"]
+	path = fzf
+	url = https://github.com/junegunn/fzf
