--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -15,6 +15,8 @@
       path: zsh/*
       relink: true
     ~/.antigen:
+    ~/.fzf:
+    ~/.fzf.zsh: zsh/fzf.zsh
     ~/.config/neofetch/config.conf: config/neofetch/config.conf
     ~/.config/neofetch/config: config/neofetch/config.conf
 - shell:
