Added oh-my-zsh as submodule

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -15,6 +15,7 @@
       path: zsh/*
       relink: true
     ~/.antigen:
+    ~/.oh-my-zsh:
     ~/.fzf:
     ~/.fzf.zsh: zsh/fzf.zsh
     ~/.config/neofetch/config.conf: config/neofetch/config.conf
