--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "oh-my-zsh"]
 	path = oh-my-zsh
 	url = https://github.com/robbyrussell/oh-my-zsh
+[submodule "zsh/submodules/revolver"]
+	path = zsh/submodules/revolver
+	url = https://github.com/molovo/revolver.git
