--- a/config/neofetch/config.conf
+++ b/config/neofetch/config.conf
@@ -1,51 +1,52 @@
 print_info() {
     info title
-    info line_break
-
-    info cols
-    info line_break
-    info "OS" distro
+    prin
     info "Host" model
+    info "OS" distro
     info "Kernel" kernel
-    info "Uptime" uptime
+    info "CPU" cpu
     info "Packages" packages
+    prin
+    info "DE" de
     info "Shell" shell
     info "Resolution" resolution
-    info "DE" de
     info "WM" wm
     info "WM Theme" wm_theme
     info "Theme" theme
     info "Icons" icons
     info "Terminal" term
     info "Terminal Font" term_font
-    info "CPU" cpu
-
-    info line_break
-    info "Memory" memory
+    prin
     info "CPU Usage" cpu_usage
+    info "Memory" memory
     info "Disk" disk
     info "Local IP" local_ip
     info "Public IP" public_ip
     info "Users" users
     info "Install Date" install_date
-    info line_break
+    info "Uptime" uptime
+    prin
+
+    info cols
+    # Wait for the functions to complete
+    wait
 }
 kernel_shorthand="on"
-distro_shorthand="off"
+distro_shorthand="on"
 os_arch="on"
 uptime_shorthand="on"
 shell_path="off"
 shell_version="on"
 speed_type="bios_limit"
-speed_shorthand="off"
+speed_shorthand="on"
 cpu_brand="on"
 cpu_speed="on"
 cpu_cores="logical"
-cpu_temp="off"
+cpu_temp="on"
 gpu_brand="on"
 gpu_type="all"
 refresh_rate="off"
-gtk_shorthand="off"
+gtk_shorthand="on"
 gtk2="on"
 gtk3="on"
 public_ip_host="http://ident.me"
@@ -54,7 +55,8 @@ disk_subtitle="mount"
 song_shorthand="off"
 install_time="on"
 install_time_format="24h"
-colors=(4 1 8 8 8 7)
+# colors=(4 1 8 8 8 7)
+color=(distro)
 bold="on"
 underline_enabled="on"
 underline_char="-"
@@ -62,12 +64,14 @@ block_range=(0 7)
 color_blocks="on"
 block_width=3
 block_height=1
-bar_char_elapsed="="
-bar_char_total="."
+# bar_char_elapsed="="
+# bar_char_total="."
 bar_border="on"
 bar_length=15
-bar_color_elapsed="2"
-bar_color_total="8"
+# bar_color_elapsed="2"
+# bar_color_total="8"
+bar_color_elapsed="auto"
+bar_color_total="auto"
 cpu_display="barinfo"
 memory_display="barinfo"
 battery_display="barinfo"
@@ -91,4 +95,4 @@ scrot_cmd="auto"
 scrot_name="neofetch-$(date +%F-%I-%M-%S-${RANDOM}).png"
 image_host="teknik"
 stdout="off"
-config_version="3.3.0"
+config_version="4.0.0"
