Update neofetch config

--- a/config/neofetch/config.conf
+++ b/config/neofetch/config.conf
@@ -31,6 +31,7 @@ print_info() {
     # Wait for the functions to complete
     wait
 }
+align_output="right"
 kernel_shorthand="on"
 distro_shorthand="on"
 os_arch="on"
@@ -56,22 +57,22 @@ song_shorthand="off"
 install_time="on"
 install_time_format="24h"
 # colors=(4 1 8 8 8 7)
-color=(distro)
+colors=(distro)
 bold="on"
 underline_enabled="on"
 underline_char="-"
 block_range=(0 7)
 color_blocks="on"
-block_width=3
-block_height=1
-# bar_char_elapsed="="
-# bar_char_total="."
+# block_width=3
+# block_height=1
+bar_char_elapsed="="
+bar_char_total="-"
 bar_border="on"
 bar_length=15
 # bar_color_elapsed="2"
 # bar_color_total="8"
-bar_color_elapsed="auto"
-bar_color_total="auto"
+bar_color_elapsed="distro"
+bar_color_total="distro"
 cpu_display="barinfo"
 memory_display="barinfo"
 battery_display="barinfo"
