Updated to yse superuser_do function vs sudo

--- a/config/neofetch/config.conf
+++ b/config/neofetch/config.conf
@@ -18,8 +18,11 @@ print_info() {
     info "Terminal Font" term_font
     prin
     info "CPU Usage" cpu_usage
+    prin
     info "Memory" memory
+    prin
     info "Disk" disk
+    prin
     info "Local IP" local_ip
     info "Public IP" public_ip
     info "Users" users
@@ -44,7 +47,7 @@ cpu_brand="on"
 cpu_speed="on"
 cpu_cores="logical"
 cpu_temp="on"
-gpu_brand="on"
+gpu_brand="off"
 gpu_type="all"
 refresh_rate="off"
 gtk_shorthand="on"
@@ -59,24 +62,24 @@ install_time_format="24h"
 # colors=(4 1 8 8 8 7)
 colors=(distro)
 bold="on"
-underline_enabled="on"
-underline_char="-"
+# underline_enabled="on"
+# underline_char="-"
 block_range=(0 7)
 color_blocks="on"
 # block_width=3
 # block_height=1
-bar_char_elapsed="="
-bar_char_total="-"
-bar_border="on"
+bar_char_elapsed="█"
+bar_char_total="_"
+bar_border="off"
 bar_length=15
 # bar_color_elapsed="2"
 # bar_color_total="8"
 bar_color_elapsed="distro"
 bar_color_total="distro"
-cpu_display="barinfo"
-memory_display="barinfo"
-battery_display="barinfo"
-disk_display="barinfo"
+cpu_display="infobar"
+memory_display="infobar"
+battery_display="infobar"
+disk_display="infobar"
 image_backend="ascii"
 image_source="auto"
 ascii_distro="auto"
