--- a/config/neofetch/config.conf
+++ b/config/neofetch/config.conf
@@ -1,14 +1,14 @@
 print_info() {
     info title
-    prin
+    info cols
     info "Host" model
     info "OS" distro
     info "Kernel" kernel
     info "CPU" cpu
     info "Packages" packages
-    prin
     info "DE" de
     info "Shell" shell
+    prin
     info "Resolution" resolution
     info "WM" wm
     info "WM Theme" wm_theme
@@ -18,9 +18,7 @@ print_info() {
     info "Terminal Font" term_font
     prin
     info "CPU Usage" cpu_usage
-    prin
     info "Memory" memory
-    prin
     info "Disk" disk
     prin
     info "Local IP" local_ip
@@ -30,15 +28,14 @@ print_info() {
     info "Uptime" uptime
     prin
 
-    info cols
     # Wait for the functions to complete
-    wait
+    # wait
 }
 align_output="right"
 kernel_shorthand="on"
 distro_shorthand="on"
 os_arch="on"
-uptime_shorthand="on"
+uptime_shorthand="tiny"
 shell_path="off"
 shell_version="on"
 speed_type="bios_limit"
@@ -46,7 +43,7 @@ speed_shorthand="on"
 cpu_brand="on"
 cpu_speed="on"
 cpu_cores="logical"
-cpu_temp="on"
+cpu_temp="C"
 gpu_brand="off"
 gpu_type="all"
 refresh_rate="off"
@@ -59,8 +56,8 @@ disk_subtitle="mount"
 song_shorthand="off"
 install_time="on"
 install_time_format="24h"
-# colors=(4 1 8 8 8 7)
-colors=(distro)
+colors=(4 1 8 8 8 7)
+# colors=(distro)
 bold="on"
 # underline_enabled="on"
 # underline_char="-"
@@ -68,14 +65,16 @@ block_range=(0 7)
 color_blocks="on"
 # block_width=3
 # block_height=1
-bar_char_elapsed="█"
-bar_char_total="_"
+bar_char_elapsed="▆"
+bar_char_total="▁"
 bar_border="off"
 bar_length=15
 # bar_color_elapsed="2"
 # bar_color_total="8"
-bar_color_elapsed="distro"
-bar_color_total="distro"
+bar_color_elapsed="3"
+bar_color_total="2"
+# bar_color_elapsed="distro"
+# bar_color_total="distro"
 cpu_display="infobar"
 memory_display="infobar"
 battery_display="infobar"
@@ -99,4 +98,4 @@ scrot_cmd="auto"
 scrot_name="neofetch-$(date +%F-%I-%M-%S-${RANDOM}).png"
 image_host="teknik"
 stdout="off"
-config_version="4.0.0"
+config_version="6.0.0"
